src/main/gen/com/intellij/lang/graql/parser/GraqlParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.lang.graql.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.intellij.lang.graql.psi.GraqlTokenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class GraqlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ID_MACRO) {
      r = ID_MACRO(b, 0);
    }
    else if (t == MACRO_EQUALS) {
      r = MACRO_EQUALS(b, 0);
    }
    else if (t == MACRO_NOESCP) {
      r = MACRO_NOESCP(b, 0);
    }
    else if (t == ACCESSOR) {
      r = accessor(b, 0);
    }
    else if (t == AGGREGATE) {
      r = aggregate(b, 0);
    }
    else if (t == AGGREGATE_QUERY) {
      r = aggregateQuery(b, 0);
    }
    else if (t == AND_BOOL) {
      r = andBool(b, 0);
    }
    else if (t == ARGUMENT) {
      r = argument(b, 0);
    }
    else if (t == BLOCK) {
      r = block(b, 0);
    }
    else if (t == BLOCK_CONTENTS) {
      r = blockContents(b, 0);
    }
    else if (t == BOOL) {
      r = bool(b, 0);
    }
    else if (t == CASTING) {
      r = casting(b, 0);
    }
    else if (t == CLUSTER) {
      r = cluster(b, 0);
    }
    else if (t == CLUSTER_PARAM) {
      r = clusterParam(b, 0);
    }
    else if (t == COMPUTE_METHOD) {
      r = computeMethod(b, 0);
    }
    else if (t == COMPUTE_QUERY) {
      r = computeQuery(b, 0);
    }
    else if (t == COUNT) {
      r = count(b, 0);
    }
    else if (t == DEFINE_QUERY) {
      r = defineQuery(b, 0);
    }
    else if (t == DEGREES) {
      r = degrees(b, 0);
    }
    else if (t == DELETE_QUERY) {
      r = deleteQuery(b, 0);
    }
    else if (t == DOUBLE_) {
      r = double_(b, 0);
    }
    else if (t == ELSE_IF_PARTIAL) {
      r = elseIfPartial(b, 0);
    }
    else if (t == ELSE_PARTIAL) {
      r = elsePartial(b, 0);
    }
    else if (t == ESCAPED_EXPRESSION) {
      r = escapedExpression(b, 0);
    }
    else if (t == EXPRESSION) {
      r = expression(b, 0);
    }
    else if (t == FOR_EACH_STATEMENT) {
      r = forEachStatement(b, 0);
    }
    else if (t == FOR_IN_STATEMENT) {
      r = forInStatement(b, 0);
    }
    else if (t == GET_QUERY) {
      r = getQuery(b, 0);
    }
    else if (t == GROUP_BOOL) {
      r = groupBool(b, 0);
    }
    else if (t == IDENTIFIER) {
      r = identifier(b, 0);
    }
    else if (t == IF_PARTIAL) {
      r = ifPartial(b, 0);
    }
    else if (t == IF_STATEMENT) {
      r = ifStatement(b, 0);
    }
    else if (t == IN_LIST) {
      r = inList(b, 0);
    }
    else if (t == INSERT_QUERY) {
      r = insertQuery(b, 0);
    }
    else if (t == INT_) {
      r = int_(b, 0);
    }
    else if (t == LABEL) {
      r = label(b, 0);
    }
    else if (t == LABEL_LIST) {
      r = labelList(b, 0);
    }
    else if (t == LABEL_OR_VAR) {
      r = labelOrVar(b, 0);
    }
    else if (t == LIST) {
      r = list(b, 0);
    }
    else if (t == MATCH_LIMIT) {
      r = matchLimit(b, 0);
    }
    else if (t == MATCH_LIMIT_OFFSET) {
      r = matchLimitOffset(b, 0);
    }
    else if (t == MATCH_OFFSET) {
      r = matchOffset(b, 0);
    }
    else if (t == MATCH_OFFSET_LIMIT) {
      r = matchOffsetLimit(b, 0);
    }
    else if (t == MATCH_ORDER_BY) {
      r = matchOrderBy(b, 0);
    }
    else if (t == MATCH_PART) {
      r = matchPart(b, 0);
    }
    else if (t == MAX) {
      r = max(b, 0);
    }
    else if (t == MEAN) {
      r = mean(b, 0);
    }
    else if (t == MEDIAN) {
      r = median(b, 0);
    }
    else if (t == MIN) {
      r = min(b, 0);
    }
    else if (t == NAMED_AGG) {
      r = namedAgg(b, 0);
    }
    else if (t == NIL) {
      r = nil(b, 0);
    }
    else if (t == NOT_BOOL) {
      r = notBool(b, 0);
    }
    else if (t == NUMBER) {
      r = number(b, 0);
    }
    else if (t == OF_LIST) {
      r = ofList(b, 0);
    }
    else if (t == OR_BOOL) {
      r = orBool(b, 0);
    }
    else if (t == PATH) {
      r = path(b, 0);
    }
    else if (t == PATHS) {
      r = paths(b, 0);
    }
    else if (t == PATTERN) {
      r = pattern(b, 0, -1);
    }
    else if (t == PATTERNS) {
      r = patterns(b, 0);
    }
    else if (t == PREDICATE) {
      r = predicate(b, 0);
    }
    else if (t == PROPERTY) {
      r = property(b, 0);
    }
    else if (t == QUERY) {
      r = query(b, 0);
    }
    else if (t == STATEMENT) {
      r = statement(b, 0);
    }
    else if (t == STD) {
      r = std(b, 0);
    }
    else if (t == SUM) {
      r = sum(b, 0);
    }
    else if (t == UNDEFINE_QUERY) {
      r = undefineQuery(b, 0);
    }
    else if (t == UNTYPED_EXPRESSION) {
      r = untypedExpression(b, 0);
    }
    else if (t == VALUE) {
      r = value(b, 0);
    }
    else if (t == VALUE_OR_VAR) {
      r = valueOrVar(b, 0);
    }
    else if (t == VAR_PATTERNS) {
      r = varPatterns(b, 0);
    }
    else if (t == VARIABLES) {
      r = variables(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return GraqlFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(AND_PATTERN, OR_PATTERN, PATTERN, VAR_PATTERN),
  };

  /* ********************************************************** */
  // !<<eof>> (query)*
  static boolean GraqlFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GraqlFile")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = GraqlFile_0(b, l + 1);
    r = r && GraqlFile_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // !<<eof>>
  private static boolean GraqlFile_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GraqlFile_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !eof(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (query)*
  private static boolean GraqlFile_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GraqlFile_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!GraqlFile_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "GraqlFile_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // (query)
  private static boolean GraqlFile_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GraqlFile_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = query(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // AT (MACRO_NOESCP|ID|int_keyword|long_keyword|double_keyword|boolean_keyword|date_keyword)
  public static boolean ID_MACRO(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ID_MACRO")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && ID_MACRO_1(b, l + 1);
    exit_section_(b, m, ID_MACRO, r);
    return r;
  }

  // MACRO_NOESCP|ID|int_keyword|long_keyword|double_keyword|boolean_keyword|date_keyword
  private static boolean ID_MACRO_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ID_MACRO_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = MACRO_NOESCP(b, l + 1);
    if (!r) r = consumeToken(b, ID);
    if (!r) r = consumeToken(b, INT_KEYWORD);
    if (!r) r = consumeToken(b, LONG_KEYWORD);
    if (!r) r = consumeToken(b, DOUBLE_KEYWORD);
    if (!r) r = consumeToken(b, BOOLEAN_KEYWORD);
    if (!r) r = consumeToken(b, DATE_KEYWORD);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // AT equals_keyword LPAREN expression? (',' expression)* RPAREN accessor?
  public static boolean MACRO_EQUALS(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MACRO_EQUALS")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, AT, EQUALS_KEYWORD, LPAREN);
    r = r && MACRO_EQUALS_3(b, l + 1);
    r = r && MACRO_EQUALS_4(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && MACRO_EQUALS_6(b, l + 1);
    exit_section_(b, m, MACRO_EQUALS, r);
    return r;
  }

  // expression?
  private static boolean MACRO_EQUALS_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MACRO_EQUALS_3")) return false;
    expression(b, l + 1);
    return true;
  }

  // (',' expression)*
  private static boolean MACRO_EQUALS_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MACRO_EQUALS_4")) return false;
    int c = current_position_(b);
    while (true) {
      if (!MACRO_EQUALS_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "MACRO_EQUALS_4", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' expression
  private static boolean MACRO_EQUALS_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MACRO_EQUALS_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // accessor?
  private static boolean MACRO_EQUALS_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MACRO_EQUALS_6")) return false;
    accessor(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // AT noescp_keyword LPAREN expression? (',' expression)* RPAREN accessor? identifier?
  public static boolean MACRO_NOESCP(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MACRO_NOESCP")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, AT, NOESCP_KEYWORD, LPAREN);
    r = r && MACRO_NOESCP_3(b, l + 1);
    r = r && MACRO_NOESCP_4(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && MACRO_NOESCP_6(b, l + 1);
    r = r && MACRO_NOESCP_7(b, l + 1);
    exit_section_(b, m, MACRO_NOESCP, r);
    return r;
  }

  // expression?
  private static boolean MACRO_NOESCP_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MACRO_NOESCP_3")) return false;
    expression(b, l + 1);
    return true;
  }

  // (',' expression)*
  private static boolean MACRO_NOESCP_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MACRO_NOESCP_4")) return false;
    int c = current_position_(b);
    while (true) {
      if (!MACRO_NOESCP_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "MACRO_NOESCP_4", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' expression
  private static boolean MACRO_NOESCP_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MACRO_NOESCP_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // accessor?
  private static boolean MACRO_NOESCP_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MACRO_NOESCP_6")) return false;
    accessor(b, l + 1);
    return true;
  }

  // identifier?
  private static boolean MACRO_NOESCP_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MACRO_NOESCP_7")) return false;
    identifier(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // period identifier     //mapAccessor
  //     | LBR int_ RBR
  public static boolean accessor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "accessor")) return false;
    if (!nextTokenIs(b, "<accessor>", LBR, PERIOD)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACCESSOR, "<accessor>");
    r = accessor_0(b, l + 1);
    if (!r) r = accessor_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // period identifier
  private static boolean accessor_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "accessor_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PERIOD);
    r = r && identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LBR int_ RBR
  private static boolean accessor_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "accessor_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBR);
    r = r && int_(b, l + 1);
    r = r && consumeToken(b, RBR);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // identifier argument*      // customAgg
  //     | '(' namedAgg (',' namedAgg)* ')'
  public static boolean aggregate(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AGGREGATE, "<aggregate>");
    r = aggregate_0(b, l + 1);
    if (!r) r = aggregate_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // identifier argument*
  private static boolean aggregate_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && aggregate_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // argument*
  private static boolean aggregate_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!argument(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "aggregate_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // '(' namedAgg (',' namedAgg)* ')'
  private static boolean aggregate_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && namedAgg(b, l + 1);
    r = r && aggregate_1_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' namedAgg)*
  private static boolean aggregate_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate_1_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!aggregate_1_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "aggregate_1_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' namedAgg
  private static boolean aggregate_1_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate_1_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && namedAgg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // matchPart aggregate_keyword aggregate ';'
  public static boolean aggregateQuery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregateQuery")) return false;
    if (!nextTokenIs(b, MATCH_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = matchPart(b, l + 1);
    r = r && consumeToken(b, AGGREGATE_KEYWORD);
    r = r && aggregate(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, m, AGGREGATE_QUERY, r);
    return r;
  }

  /* ********************************************************** */
  // groupBool and_keyword groupBool
  public static boolean andBool(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "andBool")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = groupBool(b, l + 1);
    r = r && consumeToken(b, AND_KEYWORD);
    r = r && groupBool(b, l + 1);
    exit_section_(b, m, AND_BOOL, r);
    return r;
  }

  /* ********************************************************** */
  // VARIABLE  // variableArgument
  //     | aggregate
  public static boolean argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT, "<argument>");
    r = consumeToken(b, VARIABLE);
    if (!r) r = aggregate(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LBRACE blockContents RBRACE ';'?
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && blockContents(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    r = r && block_3(b, l + 1);
    exit_section_(b, m, BLOCK, r);
    return r;
  }

  // ';'?
  private static boolean block_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_3")) return false;
    consumeToken(b, SEMICOLON);
    return true;
  }

  /* ********************************************************** */
  // (statement | escapedExpression | query | patterns)*
  public static boolean blockContents(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "blockContents")) return false;
    Marker m = enter_section_(b, l, _NONE_, BLOCK_CONTENTS, "<block contents>");
    int c = current_position_(b);
    while (true) {
      if (!blockContents_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "blockContents", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // statement | escapedExpression | query | patterns
  private static boolean blockContents_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "blockContents_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = statement(b, l + 1);
    if (!r) r = escapedExpression(b, l + 1);
    if (!r) r = query(b, l + 1);
    if (!r) r = patterns(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expression EQ expression           //eqExpression
  //     | expression NEQ expression             //NEQExpression
  //     | number GREATER number                 //greaterExpression
  //     | number GREATEREQ number               //greaterEqExpression
  //     | number LESS number                    //lessExpression
  //     | number LESSEQ number                  //lessEqExpression
  //     | untypedExpression                     //booleanExpression
  //     | (true_keyword|false_keyword)                          //booleanConstant
  //     | orBool
  //     | andBool
  //     | notBool
  //     | groupBool
  public static boolean bool(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bool")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOL, "<bool>");
    r = bool_0(b, l + 1);
    if (!r) r = bool_1(b, l + 1);
    if (!r) r = bool_2(b, l + 1);
    if (!r) r = bool_3(b, l + 1);
    if (!r) r = bool_4(b, l + 1);
    if (!r) r = bool_5(b, l + 1);
    if (!r) r = untypedExpression(b, l + 1);
    if (!r) r = bool_7(b, l + 1);
    if (!r) r = orBool(b, l + 1);
    if (!r) r = andBool(b, l + 1);
    if (!r) r = notBool(b, l + 1);
    if (!r) r = groupBool(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
